# TimedLineProfiler

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo_train.py
timed_line_profiler/: __init__.py  __main__.py  cli.py  pattern.py  profiler.py  selection.py
timed_line_profiler/reports/: __init__.py  html.py  md.py  text.py
